--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="address-text">3635 S Lawrence St, STE G, Tacoma, WA 98409</div>
       <div class="location-text">We are located right next door to Flags A' Flyin on S 38th & Lawrence</div>
       <div class="location-maps">
-        <a href="cedar-plaza-location.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar-plaza-location.jpg" alt="Tacoma Cedar Plaza Map" style="width: 380px;" />
+        <a href="cedar_plaza_location.jpg" target="_blank" rel="noopener noreferrer">
+          <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" style="width: 380px;" />
         </a>
-        <a href="cedar-plaza-building-d.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar-plaza-building-d.jpg" alt="Cedar Plaza Building D" style="width: 320px;" />
+        <a href="cedar_plaza_building_d.jpg" target="_blank" rel="noopener noreferrer">
+          <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" style="width: 320px;" />
         </a>
       </div>
       <div class="location-map-link">
@@ -104,11 +104,9 @@
         </div>
       </div>
     </section>
-
-    <!-- Code of Conduct, FAQs, Free Class, Footer omitted here for brevity -->
-
   </div>
 
+  <!-- Footer -->
   <footer>
     <div class="footer-logos-row">
       <img src="sanitized-facility.jpg" alt="Sanitized Facility" class="sanitized" />
