--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Student Login -->
     <div class="student-login">
       <a href="https://bjjtacoma.kicksite.net/users/sign_in" target="_blank" rel="noopener noreferrer">
-        <img src="stuloginbutton.png" alt="Student Login" />
+        <img src="stuloginbutton.png" alt="Student Login" style="height: 70px; width: auto;" />
       </a>
     </div>
 
@@ -39,11 +39,11 @@
       <div class="address-text">3635 S Lawrence St, STE G, Tacoma, WA 98409</div>
       <div class="location-text">We are located right next door to Flags A' Flyin on S 38th & Lawrence</div>
       <div class="location-maps">
-        <a href="cedar_plaza_location.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" style="width: 380px;" />
+        <a href="cedar-plaza-location.jpg" target="_blank" rel="noopener noreferrer">
+          <img src="cedar-plaza-location.jpg" alt="Tacoma Cedar Plaza Map" style="width: 380px;" />
         </a>
-        <a href="cedar_plaza_building_d.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" style="width: 320px;" />
+        <a href="cedar-plaza-building-d.jpg" target="_blank" rel="noopener noreferrer">
+          <img src="cedar-plaza-building-d.jpg" alt="Cedar Plaza Building D" style="width: 320px;" />
         </a>
       </div>
       <div class="location-map-link">
@@ -106,7 +106,6 @@
     </section>
   </div>
 
-  <!-- Footer -->
   <footer>
     <div class="footer-logos-row">
       <img src="sanitized-facility.jpg" alt="Sanitized Facility" class="sanitized" />
