--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="address-text">3635 S Lawrence St, STE G, Tacoma, WA 98409</div>
       <div class="location-text">We are located right next door to Flags A' Flyin on S 38th & Lawrence</div>
       <div class="location-maps">
-        <a href="cedar-plaza-location.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar-plaza-location.jpg" alt="Tacoma Cedar Plaza Map" style="width: 380px;" />
+        <a href="cedar_plaza_location.jpg" target="_blank" rel="noopener noreferrer">
+          <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" style="width: 380px;" />
         </a>
-        <a href="cedar-plaza-building-d.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar-plaza-building-d.jpg" alt="Cedar Plaza Building D" style="width: 320px;" />
+        <a href="cedar_plaza_building_d.jpg" target="_blank" rel="noopener noreferrer">
+          <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" style="width: 320px;" />
         </a>
       </div>
       <div class="location-map-link">
@@ -58,6 +58,24 @@
         <img src="img_5426.jpeg" alt="Mat Space" />
         <img src="img_5427.jpeg" alt="Mat View" />
         <img src="img_5425.jpeg" alt="Bag Area" />
+      </div>
+    </section>
+
+    <!-- Academy Awards -->
+    <section id="awards" class="gallery-section">
+      <div class="gallery-title">Best of Tacoma Awards</div>
+      <div class="academy-gallery">
+        <img src="best_of_tacoma_2012.jpg" alt="Best of Tacoma 2012" />
+        <img src="best_of_tacoma_2013.jpg" alt="Best of Tacoma 2013" />
+        <img src="best_of_tacoma_2014.jpg" alt="Best of Tacoma 2014" />
+        <img src="best_of_tacoma_2015.jpg" alt="Best of Tacoma 2015" />
+        <img src="best_of_tacoma_2016.jpg" alt="Best of Tacoma 2016" />
+        <img src="best_of_tacoma_2017.jpg" alt="Best of Tacoma 2017" />
+        <img src="best_of_tacoma_2018.jpg" alt="Best of Tacoma 2018" />
+        <img src="best_of_tacoma_2019.jpg" alt="Best of Tacoma 2019" />
+        <img src="best_of_tacoma_2020_excellence_award.jpg" alt="Best of Tacoma 2020 Excellence Award" />
+        <img src="best_of_tacoma_2022.jpg" alt="Best of Tacoma 2022" />
+        <img src="best_of_tacoma_2023.jpg" alt="Best of Tacoma 2023" />
       </div>
     </section>
 
