--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 0 8px;
+      padding: 0 15px;
     }
     .main-banner {
       width: 100%;
@@ -24,38 +24,36 @@
       max-height: 200px;
       object-fit: contain;
       margin-bottom: 10px;
-      border-radius: 0;
-      background: none;
-      box-shadow: none;
       display: block;
     }
     .student-login {
       display: flex;
       justify-content: center;
-      margin: 22px 0 28px;
+      margin: 24px 0 32px;
     }
     .student-login img {
       cursor: pointer;
-      height: 72px;
+      height: 85px;
       width: auto;
-      box-shadow: 0 2px 14px rgba(20,60,100,0.09);
-      border-radius: 10px;
+      box-shadow: 0 2px 14px rgba(20,60,100,0.11);
+      border-radius: 11px;
       transition: transform 0.12s;
-      padding: 0 12px;
+      padding: 8px 24px;
+      background: #f3f7ff;
     }
     .student-login img:hover {
-      transform: scale(1.09);
-      box-shadow: 0 4px 18px rgba(20,60,100,0.13);
+      transform: scale(1.11);
+      box-shadow: 0 4px 22px rgba(20,60,100,0.17);
+      background: #e7f1ff;
     }
     .nav-bar {
       display: flex;
       justify-content: center;
-      gap: 18px;
-      margin-bottom: 26px;
+      gap: 25px;
+      margin-bottom: 30px;
       font-weight: 600;
       letter-spacing: 1px;
       text-transform: uppercase;
-      flex-wrap: wrap;
     }
     .nav-bar a {
       color: #14307f;
@@ -64,175 +62,159 @@
       border-bottom: 2px solid transparent;
       padding-bottom: 5px;
       transition: border-color 0.2s;
-      font-size: 1.05em;
     }
     .nav-bar a:hover {
       border-color: #314be7;
     }
     .section-title {
-      font-size: 1.22em;
+      font-size: 1.25em;
       font-weight: 700;
       color: #14307f;
-      margin: 36px 0 12px;
+      margin: 40px 0 12px;
       text-align: center;
       letter-spacing: 1px;
     }
     .address-text, .location-text, .location-map-link {
       text-align: center;
-      font-size: 1em;
-    }
-    .schedule-embed {
-      display: flex;
-      justify-content: center;
-      margin: 0 0 16px;
+      color: #444;
+      font-weight: 600;
+      margin: 6px auto 12px;
     }
     .schedule-embed iframe {
       border: 2px solid #e0e0e0;
       border-radius: 10px;
-      width: 99vw;
+      width: 98vw;
       max-width: 850px;
-      height: 370px;
+      height: 750px;
       background: #fff;
+      display: block;
+      margin: 0 auto 20px;
     }
     .location-maps {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 14px;
-      margin: 18px 0 8px;
+      gap: 22px;
+      margin: 35px 0 15px;
     }
     .location-maps a img {
-      max-width: 99vw;
-      border-radius: 8px;
-      margin: 0;
+      border-radius: 10px;
       cursor: pointer;
       transition: transform 0.2s;
+      max-width: 100%;
     }
     .location-maps a img:hover {
       transform: scale(1.05);
-    }
-    .location-map-link {
-      margin: 0 auto 20px;
-      font-size: 1.03em;
-      font-weight: 600;
-      color: #14307f;
-      letter-spacing: 0.7px;
-    }
-    .gallery-title {
-      font-size: 1.2em;
-      font-weight: 700;
-      text-align: center;
-      margin: 26px 0 10px;
-      color: #14307f;
-      letter-spacing: 1px;
     }
     .academy-gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 12px;
-      margin-bottom: 18px;
+      gap: 16px;
+      margin-bottom: 38px;
     }
     .academy-gallery img {
-      width: 97vw;
-      max-width: 330px;
-      height: 170px;
+      width: 320px;
+      height: 210px;
       object-fit: cover;
       border-radius: 8px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.05);
+    }
+    .awards-title {
+      font-size: 1.3em;
+      color: #14307f;
+      font-weight: 700;
+      margin: 44px 0 14px 0;
+      text-align: center;
+      letter-spacing: 1px;
     }
     .awards-row {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
-      margin-bottom: 14px;
+      gap: 20px;
+      margin-bottom: 40px;
     }
     .awards-row img {
-      height: 60px;
-      width: auto;
-      border-radius: 5px;
-      object-fit: contain;
-      background: #f9f9f9;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.08);
-      padding: 3px 5px;
+      width: 105px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+      background: #fff;
+      margin: 8px 0;
     }
     .lineage-header {
       text-align: center;
       color: #14307f;
       font-weight: 700;
       letter-spacing: 1px;
-      margin: 38px 0 10px;
-    }
-    .lineage-main-image {
-      text-align: center;
-      margin-bottom: 12px;
+      margin: 42px 0 14px;
     }
     .lineage-main-image img {
-      max-width: 98vw;
-      height: auto;
-      border-radius: 8px;
+      display: block;
+      margin: 0 auto 20px;
+      max-width: 100%;
+      border-radius: 10px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.1);
     }
     .lineage-photos {
       display: flex;
-      justify-content: space-evenly;
-      gap: 12px;
       flex-wrap: wrap;
-      margin-bottom: 22px;
+      justify-content: space-evenly;
+      gap: 24px;
+      margin-bottom: 40px;
     }
     .lineage-photos img {
-      width: 90px;
-      height: auto;
-      border-radius: 8px;
+      width: 125px;
+      border-radius: 10px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.1);
     }
     .instructors-section {
       background: #fafcff;
       border-radius: 15px;
       margin: 32px 0 40px;
-      padding: 22px 10px 26px 10px;
+      padding: 25px 18px 30px;
       box-shadow: 0 1px 8px rgba(60,90,150,0.04);
     }
     .instructors-title {
-      font-size: 1.13em;
+      font-size: 1.5em;
       font-weight: 700;
       text-align: center;
       color: #14307f;
-      margin-bottom: 14px;
+      margin-bottom: 26px;
       letter-spacing: 1px;
     }
     .instructors-list {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 25px;
+      gap: 42px;
     }
     .instructor-card {
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.08);
-      padding: 12px 6px;
+      padding: 19px 18px;
       text-align: center;
-      width: 210px;
-      min-width: 170px;
+      width: 260px;
+      min-width: 220px;
     }
     .instructor-card img {
-      width: 140px;
-      height: 185px;
+      width: 180px;
+      height: 255px;
       object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 8px;
+      border-radius: 12px;
+      margin-bottom: 12px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.09);
     }
     .instructor-card h3 {
-      margin: 0 0 3px 0;
-      font-size: 1.09em;
+      margin: 0 0 5px;
+      font-size: 1.2em;
       font-weight: 700;
       color: #10316a;
     }
     .instructor-card p {
-      font-size: 0.95em;
+      font-size: 1em;
       color: #363636;
       margin-bottom: 0;
     }
@@ -250,43 +232,42 @@
     .read-more-btn:hover {
       color: #314be7;
     }
-    .conduct-section,
-    .faqs-section {
-      margin: 30px auto 24px auto;
+    /* Code of Conduct & FAQ */
+    .conduct-section, .faqs-section {
+      margin: 40px auto 35px auto;
       max-width: 900px;
       background: #f7faff;
       border-radius: 12px;
-      padding: 16px 8px;
+      padding: 28px 23px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.04);
     }
-    .conduct-section h2,
-    .faqs-section h2 {
+    .conduct-section h2, .faqs-section h2 {
       text-align: center;
       color: #14307f;
-      margin-bottom: 10px;
-      font-size: 1.05em;
+      margin-bottom: 15px;
+      font-size: 1.25em;
       font-weight: 700;
       letter-spacing: 1px;
       user-select: none;
     }
     .content-collapsible {
-      max-height: 120px;
+      max-height: 140px;
       overflow: hidden;
       position: relative;
       transition: max-height 0.3s ease;
       color: #343a40;
       font-size: 1em;
       line-height: 1.4;
-      padding-left: 8px;
-      margin-bottom: 8px;
+      padding-left: 18px;
+      margin-bottom: 12px;
     }
     .content-collapsible.open {
       max-height: 2000px;
-      padding-bottom: 10px;
+      padding-bottom: 15px;
     }
     .read-more-section-btn {
       display: block;
-      margin: 0 auto 12px auto;
+      margin: 0 auto 20px auto;
       background: none;
       border: none;
       color: #14307f;
@@ -298,28 +279,44 @@
     .read-more-section-btn:hover {
       color: #314be7;
     }
+    .conduct-section ul, .faqs-section .faq-item {
+      margin-bottom: 0;
+    }
+    .conduct-section ul li {
+      margin-bottom: 7px;
+    }
+    .faqs-section .faq-q {
+      font-weight: bold;
+      color: #0d2b64;
+      margin-bottom: 2px;
+    }
+    .faqs-section .faq-a {
+      margin-left: 10px;
+      color: #262626;
+    }
+    /* Try a Free Class */
     .try-free-class {
       max-width: 430px;
-      margin: 30px auto 48px;
+      margin: 50px auto 70px;
       background: #f3f3f3;
       border-radius: 18px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.08);
-      padding: 18px 10px;
+      padding: 28px 30px;
       text-align: center;
       border: 1.5px solid #dedede;
     }
     .try-free-class h2 {
-      font-size: 1.08em;
-      margin-bottom: 9px;
+      font-size: 1.4em;
+      margin-bottom: 12px;
       font-weight: 700;
       color: #14307f;
       letter-spacing: 1px;
       text-transform: uppercase;
     }
     .try-free-class p {
-      font-size: 0.93em;
+      font-size: 0.95em;
       color: #555;
-      margin-bottom: 10px;
+      margin-bottom: 18px;
     }
     .try-free-class form input,
     .try-free-class form button,
@@ -345,60 +342,34 @@
     .try-free-class form button:hover {
       background: #314be7;
     }
-    footer {
-      margin-top: 30px;
-      background: #fff;
-      padding: 18px 0 0 0;
-      border-top: 2px solid #e0e0e0;
-    }
     .footer-logos-row {
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
       max-width: 900px;
-      margin: 0 auto 8px auto;
-      gap: 12px;
+      margin: 0 auto 12px auto;
+      gap: 18px;
       background: #fff;
     }
-    .footer-logos-row .sanitized {
-      height: auto;
-      max-height: 100px;
-      width: auto;
-      background: #fff;
+    .footer-logos-row img {
+      max-height: 175px;
       border-radius: 10px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.10);
       object-fit: contain;
-      display: block;
-    }
-    .footer-logos-row .military {
-      height: 80px;
-      width: auto;
       background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 1px 8px rgba(0,0,0,0.10);
-      object-fit: contain;
-      display: block;
-    }
-    .footer-logos-row .bullies {
-      height: 100px;
-      width: auto;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 1px 8px rgba(0,0,0,0.10);
-      object-fit: contain;
       display: block;
     }
     .social-links {
       display: flex;
       justify-content: center;
-      gap: 28px;
-      margin: 18px 0 8px 0;
+      gap: 46px;
+      margin: 30px 0 12px 0;
     }
     .social-links img {
-      height: 44px;
-      width: 44px;
+      height: 54px;
+      width: 54px;
       object-fit: contain;
-      border-radius: 8px;
+      border-radius: 10px;
       background: #fff;
       box-shadow: 0 1px 6px rgba(0,0,0,0.08);
       transition: transform 0.13s;
@@ -410,26 +381,50 @@
     .footer-bottom {
       text-align: center;
       color: #a6a6a6;
-      font-size: 14px;
-      margin-top: 14px;
-      margin-bottom: 3px;
+      font-size: 15px;
+      margin-top: 18px;
+      margin-bottom: 6px;
       letter-spacing: 1px;
     }
-    @media (max-width: 800px) {
-      .main-banner { max-height: 120px; }
-      .academy-gallery img { width: 99vw; height: auto; max-width: 99vw; }
-      .lineage-photos img { width: 62px; }
-      .footer-logos-row img { max-height: 64px; }
-      .student-login img { height: 50px; }
-      .schedule-embed iframe { height: 310px; }
+    @media (max-width: 950px) {
+      .footer-logos-row img {
+        max-height: 95px;
+      }
     }
-    @media (max-width: 520px) {
-      .container { padding: 0 3px; }
-      .main-banner { max-height: 60px; }
+    @media (max-width: 700px) {
+      .main-banner {
+        height: 100px;
+      }
+      .instructor-card img {
+        width: 120px;
+        height: 170px;
+      }
       .academy-gallery img,
-      .location-maps a img { width: 99vw; height: auto; max-width: 99vw; }
-      .lineage-main-image img { max-width: 99vw; }
-      .footer-logos-row img { max-height: 40px; }
+      .awards-row img {
+        width: 95vw;
+        max-width: 99vw;
+        height: auto;
+      }
+      .lineage-photos img {
+        width: 72px;
+      }
+    }
+    @media (max-width: 550px) {
+      .container {
+        padding: 0 5px;
+      }
+      .main-banner {
+        height: 58px;
+      }
+      .academy-gallery img,
+      .awards-row img {
+        width: 100vw;
+        max-width: 99vw;
+        height: auto;
+      }
+      .footer-logos-row img {
+        max-height: 54px;
+      }
     }
   </style>
 </head>
@@ -489,7 +484,7 @@
     </section>
 
     <!-- Academy Awards -->
-    <div class="section-title">Academy Awards</div>
+    <div class="awards-title">Academy Awards</div>
     <div class="awards-row">
       <img src="best_of_tacoma-2012.jpg" alt="Best of Tacoma 2012" />
       <img src="best_of_tacoma_2013.jpg" alt="Best of Tacoma 2013" />
@@ -499,7 +494,7 @@
       <img src="best_of_tacoma_2017.jpg" alt="Best of Tacoma 2017" />
       <img src="best_of_tacoma_2018.jpg" alt="Best of Tacoma 2018" />
       <img src="best_of_tacoma_2019.jpg" alt="Best of Tacoma 2019" />
-      <img src="best_of_tacoma_2020_excellence_award.jpg" alt="Best of Tacoma 2020" />
+      <img src="best_of_tacoma_2020_excellence_award.jpg" alt="Best of Tacoma 2020 Excellence Award" />
       <img src="best_of_tacoma_2022.jpg" alt="Best of Tacoma 2022" />
       <img src="best_of_tacoma_2023.jpg" alt="Best of Tacoma 2023" />
     </div>
@@ -526,21 +521,27 @@
           <img src="mcm_5th_degree.jpg" alt="Professor Marcello C Monteiro" />
           <h3>Professor Marcello C Monteiro</h3>
           <p class="bio-short">Master Monteiro is well known in Brazil as a teacher and coach for creating fighting strategies...</p>
-          <p class="bio-full" style="display:none;">Since the age of six, Marcello has been hooked on Jiu-Jitsu, starting at Carlson Gracie's Academy and transitioning to W2M in Copacabana. Owned by Ricardo Juca, W2M was the home base for Jiu-Jitsu legend Ricardo De la Riva. From White-Black, Marcello studied with De la Riva and many considered him as De la Riva's protege. In 1998, Marcello opened his first school in Rio and in 1999, Marcello received his Black Belt from De la Riva. In 2001, he received an additional certificate for his black belt from 9th Degree Red Belt Carlos Robson Gracie. Today Marcello holds a 6th Degree Black Belt. He also leads one of America's largest Jiu-Jitsu Associations with over 100 schools training under him, including Michael Proctor's Brazilian Jiu-Jitsu Academy of Tacoma.</p>
+          <p class="bio-full" style="display:none;">
+            Since the age of six, Marcello has been hooked on Jiu-Jitsu, starting at Carlson Gracie's Academy and transitioning to W2M in Copacabana. Owned by Ricardo Juca, W2M was the home base for Jiu-Jitsu legend Ricardo De la Riva. From White-Black, Marcello studied with De la Riva and many considered him as De la Riva's protege. In 1998, Marcello opened his first school in Rio and in 1999, Marcello received his Black Belt from De la Riva. In 2001, he received an additional certificate for his black belt from 9th Degree Red Belt Carlos Robson Gracie. Today Marcello holds a 6th Degree Black Belt. He also leads one of America's largest Jiu-Jitsu Associations with over 100 schools training under him, including Michael Proctor's Brazilian Jiu-Jitsu Academy of Tacoma.
+          </p>
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
         <div class="instructor-card">
           <img src="michael_proctor.jpg" alt="Professor Michael Proctor" />
           <h3>Professor Michael Proctor</h3>
           <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
-          <p class="bio-full" style="display:none;">Michael began his Brazilian Jiu-Jitsu career under Lotus Club Jiu-Jitsu, transitioning to De La Riva Black Belt Marcello Monteiro in 2008. In 2010 Michael opened the first Marcello C. Monteiro Academy in Washington State. Michael is the proud owner of Brazilian Jiu-Jitsu Tacoma and currently holds the rank of 3rd Degree Black Belt under Marcello C. Monteiro.</p>
+          <p class="bio-full" style="display:none;">
+            Michael began his Brazilian Jiu-Jitsu career under Lotus Club Jiu-Jitsu, transitioning to De La Riva Black Belt Marcello Monteiro in 2008. In 2010 Michael opened the first Marcello C. Monteiro Academy in Washington State. Michael is the proud owner of Brazilian Jiu-Jitsu Tacoma and currently holds the rank of 3rd Degree Black Belt under Marcello C. Monteiro.
+          </p>
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
         <div class="instructor-card">
           <img src="david_gines.jpg" alt="Professor David Gines" />
           <h3>Professor David Gines</h3>
           <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
-          <p class="bio-full" style="display:none;">David is a 2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro, dedicated to delivering high-quality instruction and fostering growth in every student.</p>
+          <p class="bio-full" style="display:none;">
+            David is a 2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro, dedicated to delivering high-quality instruction and fostering growth in every student.
+          </p>
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
       </div>
@@ -696,6 +697,7 @@
   </footer>
 
   <script>
+    // Instructor Bio toggle
     function toggleBio(button) {
       const card = button.parentElement;
       const shortBio = card.querySelector('.bio-short');
@@ -710,10 +712,12 @@
         button.textContent = 'Read More';
       }
     }
+    // Code of Conduct and FAQ toggle
     function toggleSection(id) {
       const content = document.getElementById(id);
       content.classList.toggle('open');
     }
+    // Smooth scroll for nav links
     document.querySelectorAll('.nav-bar a').forEach(anchor => {
       anchor.addEventListener('click', function(e) {
         e.preventDefault();
