--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     <!-- Academy Awards -->
     <div class="awards-title">Academy Awards</div>
     <div class="awards-row">
-      <img src="best_of_tacoma-2012.jpg" alt="Best of Tacoma 2012" />
+      <img src="best_of_tacoma_2012.jpg" alt="Best of Tacoma 2012" />
       <img src="best_of_tacoma_2013.jpg" alt="Best of Tacoma 2013" />
       <img src="best_of_tacoma_2014.jpg" alt="Best of Tacoma 2014" />
       <img src="best_of_tacoma_2015.jpg" alt="Best of Tacoma 2015" />
@@ -509,7 +509,7 @@
       <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." />
       <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." />
       <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" />
-      <img src="marcello_c_monteiro.jpeg" alt="Marcello C Monteiro" />
+      <img src="marcello_c_montiero.jpeg" alt="Marcello C Monteiro" />
       <img src="michael_proctor_sr.png" alt="Michael Proctor" />
     </div>
 
@@ -527,7 +527,7 @@
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
         <div class="instructor-card">
-          <img src="michael_proctor.jpg" alt="Professor Michael Proctor" />
+          <img src="michael_proctor.JPG" alt="Professor Michael Proctor" />
           <h3>Professor Michael Proctor</h3>
           <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
           <p class="bio-full" style="display:none;">
@@ -536,7 +536,7 @@
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
         <div class="instructor-card">
-          <img src="david_gines.jpg" alt="Professor David Gines" />
+          <img src="david_gines.JPG" alt="Professor David Gines" />
           <h3>Professor David Gines</h3>
           <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
           <p class="bio-full" style="display:none;">
@@ -678,16 +678,16 @@
 
   <footer>
     <div class="footer-logos-row">
-      <img src="sanitized-facility.jpg" alt="Sanitized Facility" class="sanitized" />
-      <img src="military-discounts.gif" alt="Military Discounts" class="military" />
-      <img src="no-bullies.jpg" alt="No Bullies" class="bullies" />
+      <img src="sanitized_facility.jpg" alt="Sanitized Facility" class="sanitized" />
+      <img src="military_discounts.gif" alt="Military Discounts" class="military" />
+      <img src="no_bullies.jpg" alt="No Bullies" class="bullies" />
     </div>
     <div class="social-links">
       <a href="https://www.instagram.com/gritcitybjj" target="_blank" title="Instagram" rel="noopener noreferrer">
         <img src="instagram.png" alt="Instagram" />
       </a>
       <a href="https://x.com/gritcitybjj" target="_blank" title="𝕏" rel="noopener noreferrer">
-        <img src="x.png" alt="𝕏" style="background:#000;" />
+        <img src="𝕏.png" alt="𝕏" style="background:#000;" />
       </a>
       <a href="https://www.facebook.com/gritcitybjj" target="_blank" title="Facebook" rel="noopener noreferrer">
         <img src="facebook.png" alt="Facebook" />
