--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     .student-login {
       display: flex;
       justify-content: center;
-      margin: 24px 0 32px;
+      margin: 18px 0 28px;
     }
     .student-login img {
       cursor: pointer;
-      height: 85px;
+      height: 42px; /* Reduced by 50% */
       width: auto;
       box-shadow: 0 2px 14px rgba(20,60,100,0.11);
       border-radius: 11px;
       transition: transform 0.12s;
-      padding: 8px 24px;
+      padding: 6px 16px;
       background: #f3f7ff;
     }
     .student-login img:hover {
@@ -119,6 +119,7 @@
       object-fit: cover;
       border-radius: 8px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.05);
+      transition: width 0.2s, height 0.2s;
     }
     .awards-title {
       font-size: 1.3em;
@@ -132,7 +133,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 16px;
       margin-bottom: 40px;
     }
     .awards-row img {
@@ -142,6 +143,7 @@
       box-shadow: 0 2px 12px rgba(0,0,0,0.08);
       background: #fff;
       margin: 8px 0;
+      transition: width 0.2s;
     }
     .lineage-header {
       text-align: center;
@@ -386,9 +388,18 @@
       margin-bottom: 6px;
       letter-spacing: 1px;
     }
+
+    /* Mobile Responsive Tweaks */
     @media (max-width: 950px) {
       .footer-logos-row img {
         max-height: 95px;
+      }
+      .awards-row img {
+        width: 68px;
+      }
+      .academy-gallery img {
+        width: 190px;
+        height: 125px;
       }
     }
     @media (max-width: 700px) {
@@ -399,14 +410,18 @@
         width: 120px;
         height: 170px;
       }
-      .academy-gallery img,
       .awards-row img {
-        width: 95vw;
-        max-width: 99vw;
-        height: auto;
+        width: 54px;
       }
-      .lineage-photos img {
-        width: 72px;
+      .academy-gallery img {
+        width: 120px;
+        height: 80px;
+      }
+      .nav-bar {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        font-size: 1em;
       }
     }
     @media (max-width: 550px) {
@@ -416,14 +431,21 @@
       .main-banner {
         height: 58px;
       }
-      .academy-gallery img,
-      .awards-row img {
-        width: 100vw;
-        max-width: 99vw;
-        height: auto;
+      .academy-gallery img {
+        width: 80px;
+        height: 54px;
       }
       .footer-logos-row img {
         max-height: 54px;
+      }
+      .awards-row img {
+        width: 40px;
+      }
+      .nav-bar {
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+        font-size: 1em;
       }
     }
   </style>
