--- a/index.html
+++ b/index.html
@@ -18,14 +18,34 @@
       margin: 0 auto;
       padding: 0 15px;
     }
-    .main-banner {
-      width: 100%;
-      height: auto;
-      max-height: 200px;
-      object-fit: contain;
-      margin-bottom: 10px;
-      display: block;
-    }
+.main-banner {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+  object-fit: contain;
+  margin-bottom: 10px;
+  display: block;
+}
+@media (max-width: 700px) {
+  .main-banner {
+    width: 100vw;
+    max-width: 100vw;
+    height: auto;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+    border-radius: 0;
+  }
+}
+@media (max-width: 550px) {
+  .main-banner {
+    width: 100vw;
+    max-width: 100vw;
+    height: auto;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+    border-radius: 0;
+  }
+}
     .student-login {
       display: flex;
       justify-content: center;
